--- a/ClientAPP/src/app/core/components/chat/chat.component.html
+++ b/ClientAPP/src/app/core/components/chat/chat.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container-fluid px-0">
-  <div class="row gx-0"> 
+  <div class="row gx-0">
 
     <!-- Chat Sidebar (left) -->
     <div class="col-12 col-md-4 col-lg-3 col-xl-2 bg-white border-end" style="height: 100vh;">
@@ -20,27 +20,7 @@
         </div>
 
         <!-- User list -->
-        <div class="flex-grow-1 overflow-auto ">
-          <ul class="list-group list-group-flush">
-            <li *ngFor="let user of chatSerivce.onlineUsers "
-              class="list-group-item d-flex align-items-center px-4 py-3 border-0 user-item" (click)="openPrivateChat(user)"
-              style="cursor: pointer;">
-              <div class="position-relative me-3">
-                <span
-                  class="position-absolute bottom-0 end-0 translate-middle p-1 bg-success border border-white rounded-circle"
-                  style="width: 10px; height: 10px;"></span>
-                <div [ngClass]="{'bg-primary':user===chatSerivce.myName,'bg-success':user!==chatSerivce.myName}"
-                  class="avatar text-white rounded-circle d-flex justify-content-center align-items-center fw-bold"
-                  style="width: 42px; height: 42px;">
-                  {{ user.charAt(0).toUpperCase() }}
-                </div>
-              </div>
-              <div class="flex-grow-1 ml-1">
-                <div class="fw-semibold text-dark">{{ user }}</div>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <app-online-users [myName]="chatSerivce.myName" [onlineUsers]="chatSerivce.onlineUsers"></app-online-users>
       </div>
     </div>
 
